--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,11 +1,11 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-//        applicationId "com.seavenheaven.iosswitch"
+        applicationId "com.example.sample"
         minSdkVersion 8
         targetSdkVersion 21
         versionCode 1
@@ -22,5 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile files('libs/library_nineoldandroids.jar')
+    compile project(':app')
 }
