--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -26,8 +26,9 @@ repositories {
 }
 
 dependencies {
-//    compile(name: 'shswitchview', ext: 'aar')
+    //    compile(name: 'shswitchview', ext: 'aar')
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.7heaven.ioswidget:iosswitch:0.1'
+    //    compile 'com.7heaven.ioswidget:iosswitch:0.1'
+    compile project(':iosswitch')
 }
