--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "7heaven/SHSwitchView",
+    "name": "7heaven/sh-switch-view",
     "description": "an iOS-7 Style Switch for android",
     "keywords": ["switch", "ios style", "widget"],
     "license": "MIT",
