modify build.gradle to prevent build fail

--- a/iosswitch/build.gradle
+++ b/iosswitch/build.gradle
@@ -86,7 +86,10 @@ artifacts {
 }
 
 Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
+File f = new File("local.properties")
+if(f.exists()) {
+    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+}
 bintray {
     user = properties.getProperty("bintray.user")
     key = properties.getProperty("bintray.apikey")
