--- a/iosswitch/build.gradle
+++ b/iosswitch/build.gradle
@@ -31,7 +31,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile files('libs/library_nineoldandroids.jar')
+    compile 'com.nineoldandroids:library:2.4.0'
 }
 
 install {
